# prc-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cargo.yml  cmake.yml  rust.yml  rust_win.yml
include/: prc.h
scripts/: extract3d.sh  visualize_prc_json
src/: builtin.rs  builtin_ana.rs  builtin_byte_aligned.rs  capi.rs  common.rs  compressed_nurbs.rs  constants.rs  decompress.rs  double.rs  gdb_debugger_visualizer_prc.py  generate_rust  huffman.rs  indent.rs  lib.rs  prc.h  prc.json  prc_builtin.rs  prc_builtin_ana.rs  prc_capi.rs  prc_double.rs  prc_gen.rs  prc_gen_test.rs  prc_huffman.rs  prc_schema.rs  schema.rs  tess_3d_compressed.rs  tess_3d_wire.rs  test_common.rs  vec3.rs
testdata/: 3D-PDF-Sample-School.stream-48.prc  expected_all.txt  expected_quick.txt  list_all.txt  list_geom_fail.txt  list_quick.txt  list_tess_fail.txt  pmi_sample.stream-23.prc  prc_describe  prc_describe_mt  sample-chevrolet-camaro-2014-rs-medium_r10325.stream-137.prc  yellowtri2.json
tools/: Cargo.toml
tools/prc2json/: .gitignore  CMakeLists.txt  main.cpp
tools/src/: prc_describe.rs  prc_explode.rs
