[package]
name = "prc_rs"
version = "0.1.0"
authors = ["Kristof Ralovich <tade60@freemail.hu>"]
edition = "2024"
license = "MIT"

[lib]
name = "prc_rs"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
inflate = "0.4"
libdeflater = "1.25.2"
log = "0.4.29"
#nom = "8.0.0"
byteorder = "1"
#bitreader = "0.3.11"
modular-bitfield = "0.13.1"
bitvec = "1.0.1"
static_assertions = "1.1.0"
num_enum = "0.7.6"
bitstream-io = "4.9.0"
rayon = "1.11.0"
measure_time = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bson = {  version = "3.1.0", features = ["serde"] }

[workspace]
members = ["tools"]

[profile.release]
lto = "thin"

[profile.reldeb]
inherits = "release"
lto = "off"
debug = true