[package]
name = "prc_tools"
version = "0.1.0"
authors = ["Kristof Ralovich <tade60@freemail.hu>"]
edition = "2024"
license = "MIT"

[dependencies]
inflate = "0.4"
nom = "8.0.0"
byteorder = "1"
prc_rs = { path = ".." }
clap = { version = "4.5.54", features = ["derive"] }
pretty_env_logger = "0.5"

[[bin]]
name = "prc_describe"
path = "src/prc_describe.rs"

[[bin]]
name = "prc_explode"
path = "src/prc_explode.rs"
